--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# autogeneroite templaatti git ignore 
+# autogeneroitu templaatti git ignore 
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
