--- a/python-app/pyproject.toml
+++ b/python-app/pyproject.toml
@@ -7,11 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+coverage = "^7.4.4"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
 coverage = "^7.4.4"
+invoke = "^2.2.0"
 
 [build-system]
 requires = ["poetry-core"]
