--- a/python-app/.coveragerc
+++ b/python-app/.coveragerc
@@ -1,3 +1,8 @@
 [run]
 source = src
-omit = src/**/__init__.py,src/tests/**
+omit =
+    src/**/__init__.py
+    src/**/main.py
+    src/**/app.py
+    src/**/gui/**
+    src/tests/**
