--- a/python-app/pyproject.toml
+++ b/python-app/pyproject.toml
@@ -14,6 +14,8 @@ coverage = "^7.4.4"
 pytest = "^8.1.1"
 coverage = "^7.4.4"
 invoke = "^2.2.0"
+pylint = "^3.1.0"
+autopep8 = "^2.1.0"
 
 [build-system]
 requires = ["poetry-core"]
